--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         </section>
 
         <div class="story__pictures">
-            Story pictures
+            <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="New house" class="story__img--2">
         </div>
 
         <div class="story__content">
@@ -83,7 +84,12 @@
         </div>
 
         <section class="homes">
-            Homes
+            <div class="home">Home card 1</div>
+            <div class="home">Home card 2</div>
+            <div class="home">Home card 3</div>
+            <div class="home">Home card 4</div>
+            <div class="home">Home card 5</div>
+            <div class="home">Home card 6</div>
         </section>
 
         <section class="gallery">
